--- a/css/style.scss
+++ b/css/style.scss
@@ -122,13 +122,19 @@ body {
                 span {
                     display: inline-block;
                     color: rgb(214, 0, 0);
+                    transition: 0.1s ease-in;
                     &:hover {
                         cursor: pointer;    
                         color: rgb(160, 0, 0);
-                }
+                        transform: scale(1.2);
+                    }
                     
                 }
             }
         }        
 }
 
+.line-through {
+        text-decoration: line-through;
+        text-decoration-color: rgb(214, 0, 0);
+}
