--- a/css/style.scss
+++ b/css/style.scss
@@ -54,7 +54,7 @@ body {
         transition: 0.3s ease-in;
         &__form {
                 display: flex;
-                flex-direction: column;                
+                flex-direction: column;                               
         }
 
         &__enter {
@@ -138,3 +138,11 @@ body {
         text-decoration: line-through;
         text-decoration-color: rgb(214, 0, 0);
 }
+
+li {
+        animation:scale-in-ver-top .5s cubic-bezier(.25,.46,.45,.94) both;
+        @keyframes scale-in-ver-top{0%{transform:scaleY(0);transform-origin:100% 0;opacity:1}100%{transform:scaleY(1);transform-origin:100% 0;opacity:1}}
+}
+.out {
+        animation:fade-out-bck .7s cubic-bezier(.25,.46,.45,.94) both;
+        @keyframes fade-out-bck{0%{transform:translateZ(0);opacity:1}100%{transform:translateZ(-80px);opacity:0}}}
